// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Banner /> renders a error state 1`] = `
<div>
  <div
    class="css-1vttx9d-Banner"
  >
    <span
      class="css-1w6p0kp-Banner"
    />
  </div>
</div>
`;

exports[`<Banner /> renders a success state 1`] = `
<div>
  <div
    class="css-icnjft-Banner"
  >
    <span
      class="css-1w6p0kp-Banner"
    />
  </div>
</div>
`;
